# efficient-funsearch

./: .gitignore  AGENTS.md  LICENSE  PUSH_TO_GITHUB.sh  README.md  pyproject.toml  requirements.txt
docs/: DEVLOG.md  FINAL_SPRINT.md  PROJECT_PLAN.md
docs/figures/: bcr_data.csv
docs/milestone/: MILESTONE_SUBMISSION_CHECKLIST.md  README.md  README_submit.md  code_link.txt  milestone_report_draft.md  milestone_report_draft_en.md  milestone_report_draft_zh.md  preliminary_results.md  reproduction.txt
docs/plans/: sample-efficient-funsearch-design.md
docs/report/: final.bib  main.tex
funsearch-baseline/: bin_packing_utils.py  funsearch_bin_packing_llm_api.py
funsearch-baseline/bin_packing/: bin_packing_funsearch.ipynb
funsearch-baseline/implementation/: code_manipulation.py  config.py  evaluator.py  funsearch.py  profile.py  programs_database.py  sampler.py
funsearch-baseline/logs/baseline_50samples/: run_log.csv  summary.json
funsearch-baseline/logs/dedup_50samples_v2/: run_log.csv
funsearch-baseline/logs/layer1_baseline_150_r1/: run_log.csv
funsearch-baseline/logs/layer1_baseline_150_r2/: run_log.csv
funsearch-baseline/logs/layer1_dedup_150_fp/: fingerprints.csv  run_log.csv
funsearch-baseline/logs/layer1_dedup_150_r1/: run_log.csv
funsearch-baseline/logs/layer1_dedup_150_r2/: run_log.csv
funsearch-baseline/logs/layer1_dedup_150_r3/: run_log.csv
funsearch-baseline/logs/layer1_dedup_150_r4/: run_log.csv
funsearch-baseline/logs/layer2_dedup_div_150_fp/: fingerprints.csv  run_log.csv
funsearch-baseline/logs/layer2_dedup_div_150_r1/: run_log.csv
funsearch-baseline/logs/layer2_dedup_div_150_r2/: run_log.csv
funsearch-baseline/logs/layer2_dedup_div_150_r3/: run_log.csv
funsearch-baseline/logs/layer2_dedup_div_150_r4/: run_log.csv
funsearch-baseline/logs/layer4_reevo_150_r2/: run_log.csv
funsearch-baseline/logs/layer4_reevo_150_r3/: run_log.csv
funsearch-baseline/logs/layer4_reevo_150_r4/: run_log.csv
funsearch-baseline/logs/layer4_reevo_test_r1/: run_log.csv
iclr2024/: proposal.aux  proposal.bib  proposal.out  proposal.tex  proposal_v1.tex
notebooks/: efficient_funsearch_colab.ipynb  efficient_funsearch_colab_milestone.ipynb  efficient_funsearch_colab_old.ipynb  efficient_funsearch_demo.ipynb
scripts/: analyze_baseline.py  calibration.py  collect_results.py  compute_bcr_offline.py  plot_tsne_fingerprints.py
specs/001-efficient-funsearch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  spec_zh.md  tasks.md
specs/001-efficient-funsearch/checklists/: pre-execution.md  requirements.md
specs/001-efficient-funsearch/contracts/: archive.md  detector.md  normalizer.md
src/: __init__.py  config.py
src/archive/: __init__.py  hash_store.py  models.py  program_archive.py
src/dedup/: __init__.py  dedup_config.py  dedup_filter.py  probing.py
src/integration/: __init__.py  ablation_configs.py  funsearch_adapter.py  funsearch_integration.py
src/metrics/: __init__.py  efficiency_logger.py  models.py
src/normalizer/: __init__.py  ast_normalizer.py  models.py  variable_renamer.py
src/reevo/: reflection_store.py
src/similarity/: __init__.py  ast_compare.py  behavioral_probe.py  diversity.py  embedding.py  hybrid.py  models.py
tests/: conftest.py
tests/fixtures/: sample_programs.py
tests/integration/: test_ablation_configs.py  test_doc_alignment.py  test_funsearch_adapter.py
tests/unit/: test_archive.py  test_ast_compare.py  test_behavioral_probe.py  test_diversity_selection.py  test_embedding.py  test_hybrid_detector.py  test_metrics.py  test_normalizer.py  test_phase3_diversity.py  test_similarity_models.py  test_variable_renamer.py
